; ModuleID = '/home/carl/AnghaBench/sway/sway/config/extr_bar.c_load_swaybar.c'
source_filename = "/home/carl/AnghaBench/sway/sway/config/extr_bar.c_load_swaybar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bar_config = type { i32, i32* }

@SWAY_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Invoking swaybar for bar id '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @load_swaybar(%struct.bar_config* %0) #0 {
  %2 = alloca %struct.bar_config*, align 8
  store %struct.bar_config* %0, %struct.bar_config** %2, align 8
  %3 = load %struct.bar_config*, %struct.bar_config** %2, align 8
  %4 = getelementptr inbounds %struct.bar_config, %struct.bar_config* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.bar_config*, %struct.bar_config** %2, align 8
  %9 = getelementptr inbounds %struct.bar_config, %struct.bar_config* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @wl_client_destroy(i32* %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load i32, i32* @SWAY_DEBUG, align 4
  %14 = load %struct.bar_config*, %struct.bar_config** %2, align 8
  %15 = getelementptr inbounds %struct.bar_config, %struct.bar_config* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @sway_log(i32 %13, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load %struct.bar_config*, %struct.bar_config** %2, align 8
  %19 = call i32 @invoke_swaybar(%struct.bar_config* %18)
  ret void
}

declare dso_local i32 @wl_client_destroy(i32*) #1

declare dso_local i32 @sway_log(i32, i8*, i32) #1

declare dso_local i32 @invoke_swaybar(%struct.bar_config*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
